resources/testcases_static_checks/tests/positive/isDomainRestricted/joinless.rls
../../../tests_common_data/rule-classification-examples/joinless.rls