resources/testcases_static_checks/tests/negative/isDatalog/joinless-non-terminating.rls
../../../tests_common_data/rule-classification-examples/joinless-non-terminating.rls